#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/include/rakuten/exception.h])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_LIBTOOL
# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h inttypes.h memory.h netdb.h netinet/in.h stdlib.h sys/ioctl.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_STRERROR_R
AC_CHECK_FUNCS([gettimeofday localtime_r memset select socket strpbrk strstr strtoul])

AC_ARG_WITH( [openssl-header],
	     AS_HELP_STRING( [--with-openssl-header=PATH],
	     		     [Path to header(likes '/usr/local/openssl/include')]), 
	     [CXXFLAGS="-I $withval $CXXFLAGS";CFLAGS="-I $withval $CFLAGS"],
	     [AC_MSG_ERROR([Must specify the path !])])
AC_ARG_WITH( [openssl-lib],
	     AS_HELP_STRING( [--with-openssl-lib=PATH],
	     		     [Path to header(likes '/usr/local/openssl/lib')]), 
	     [LDFLAGS="$LDFLAGS -L$withval "],
	     [AC_MSG_ERROR([Must specify the path !])])

AC_CHECK_HEADERS([openssl/sha.h],[],[AC_MSG_ERROR([openssl/sha.h not found !])])
AC_CHECK_LIB([crypto], [SHA1],[],[AC_MSG_ERROR([crypto not found !])])

AC_CONFIG_FILES([Makefile
		 src/Makefile
		 src/include/Makefile])
AC_OUTPUT
dnl touch NEWS README AUTHORS ChangeLog COPYING
dnl libtoolize --force --copy; aclocal; autoheader;automake -a -c; autoconf
